--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,6 @@
 body {
+    background: linear-gradient(to right, #4b6cb7, #182848); /* Gradient background */
+  margin-top: 2px;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
